RDS/security.tf
resource "aws_security_group" "secure_region" {
  vpc_id = aws_vpc.custom_vpc.id
  name = "secure_region"
  description = "ssh_http"
  egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
      from_port = 80
      to_port = 80
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
      Name = "secure_region"
  }
}
